--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -5,44 +5,55 @@
   = form_for(@group, html: { class: "form-horizontal", style: "margin-top: 20px;" }) do |f|
     = render 'shared/error_messages', object: f.object
     %div.notificationpanelbody
-      %h4 How you appear on MetaBright
-      %div.editprofilemanagementarea 
+      %h4 How your Group appears on MetaBright
+      .editprofilemanagementarea 
         %div{ style:"display:inline-block; width: 60%;" }       
-          %div.control-group
-            %label.control-label Name
-            %div.controls
-              = f.text_field :name
-          %div.control-group
-            %label.control-label Vanity URL
-            %div.controls
-              = f.text_field :permalink
-          %div.control-group
-            %label.control-label Profile Picture URL
-            %div.controls
+          .control-group
+            %label.control-label Group name
+            .controls
+              = f.text_field :name          
+          .control-group
+            %label.control-label Group picture URL
+            .controls
               = f.text_field :image_url, id: "image_url_input", class: "xxlarge"
               %a.btn.secondary{ style: "margin-left:10px;" } Preview   
-          %hr{ style: "margin: 10px 0; border-top: 1px solid rgb(213, 213, 213);"}       
+          .control-group
+            %label.control-label About
+            %div.controls
+              = f.text_area :description, rows: "2", style: "width: 390px;", placeholder: "Write a brief description for your Group..."  
         %div{ style:"vertical-align: top; display: inline-block; margin: 0 20px 5px 0;" }
           %div.control-group
             %div.controls{style:"margin-left:112px;"}
               = image_tag @group.picture, id: "image_url_preview", width: "150", alt: "#{@group.name}"      
-      %h4 Vital stats
-      %div.editprofilemanagementarea
-        %div.control-group
-          %label.control-label Location
-          %div.controls
-            = f.text_field :city
+      %h4 Your Group's URL
+      .editprofilemanagementarea
+        .control-group
+          %label.control-label{ style:"width: auto; "} http://www.metabright.com/groups/
+          .controls{ style: "margin-left: 245px;" }
+            = f.text_field :permalink
+            %div{ style: "margin-top: 6px; "}
+              = image_tag LIGHT_BULB_URL, style: "width: 15px; position: relative; bottom: 1px; "
+              %p{ style: "display: inline;"} Make sure there are no spaces or special characters in your URL.
+      %h4 Group profile info
+      .editprofilemanagementarea
+        .control-group
+          %label.control-label Country
+          .controls
+            = f.text_field :country            
+        .control-group
+          %label.control-label State/Province
+          .controls
             = f.text_field :state
-            = f.text_field :country
-        %div.control-group
+        .control-group
+          %label.control-label City
+          .controls
+            = f.text_field :city
+        .control-group
           %label.control-label Website
           %div.controls
             = f.text_field :website
         
-        %div.control-group
-          %label.control-label About
-          %div.controls
-            = f.text_area :description, rows: "5", style: "width: 390px;", placeholder: "Tell us about yourself..."
+        
 
     %hr
     %div.control-group
