--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -13,7 +13,7 @@ pre.unstyled { padding: 0px; background-color: inherit; border: 0px; word-break:
 .post { padding:12px; }
 .post:hover { background-color:#F9F9F9; border-radius: 4px; }
 .postheader h3 { display:inline-block; margin: 0px; font-size:18px; line-height:36px; }
-.rep_badge { height: 12px; vertical-align: baseline; }
+.rep_badge_post { height: 12px; vertical-align: baseline; }
 .mini_group_icon { height: 20px; width: 20px; margin: 0 2px; position: relative; bottom: 2px; border-radius: 3px;}
 .challengename{font-size:12px; color: #999; margin-left:10px;}
 .votingandpointsarea { display:inline-block; float:right; margin-top:4px; margin-right:-4px;}
