edits to groups show

--- a/app/assets/stylesheets/challenge.css.scss
+++ b/app/assets/stylesheets/challenge.css.scss
@@ -32,6 +32,7 @@
     padding: 12px 0 9px 13px; 
     overflow: hidden;
     
+    a:hover { text-decoration: none; }    
     h1 { font-size: 30px; line-height: 28px; }
     h2 { font-size: 18px; }
     #launch_button { float: right; margin-right: 20px; }
