--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -12,7 +12,7 @@
         - if user.groups.size > 0
           - user.groups.each do |group|
             = link_to group_path(group.permalink) do
-              = image_tag group.picture, class: "mini_group_icon", title: "Member of #{group.name}", alt: "Member of #{group.name}"
+              = image_tag group.picture, class: "mini_group_icon img-circle", title: "Member of #{group.name}", alt: "Member of #{group.name}"
         - if badge = user.reputation_badge
           = image_tag (user.reputation_badge[0]), class: "rep_badge_post", title: user.reputation_badge[1], alt: user.reputation_badge[1]
       %span
