--- a/app/assets/stylesheets/origin.css.scss
+++ b/app/assets/stylesheets/origin.css.scss
@@ -99,14 +99,14 @@
       background-color:#F9F9F9;
       
       img {
-        width: 42px;
+        width: 39px;
         height: 47px;
         margin: 4px 4px 0 0;
         display: inline-block;
       }
       
       h1 { 
-        font-size: 30px; 
+        font-size: 28px; 
         color:#404040; 
         display: inline-block; 
         vertical-align: middle;
@@ -121,7 +121,7 @@
       }
       
     .body { 
-      padding: 6px 12px;
+      padding: 12px 12px 6px;
       
       h3 { 
         display: inline; 
