--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -1,4 +1,47 @@
 #challenge
+  - if @user == current_user && current_user.guest_user?
+    .help_box
+      :javascript
+        function append_error(e){
+          $("#update_user").find("p.error").remove();
+          $("#update_user").append("<p class='error'>"+e+"</p>");
+        }
+        $(function(){
+          $("#update_user").submit(function(){
+            var e = "";
+            if($("#user_name").val() == ""){
+              e = "Please enter a name."
+            } else if($("#user_email").val() == ""){
+              e = "Please enter an email."
+            } else if($("#user_password").val() == ""){
+              e = "Please enter a password."
+            }
+            if(e != ""){
+              append_error(e);
+              return false;
+            }
+          });
+        });
+      .header
+        = image_tag STONEY_SMALL_URL, alt: "Stoney" 
+        %h1 Kind of bare, isn't it?
+      .body
+        %h4
+          Sign up with Google or Facebook to make your profile awesome in a hurry. Or sign up with your email address, and edit your profile manually.
+        %div{ style: "margin-top: 20px;" }
+          %div
+            = link_to "/auth/google_oauth2", class: "btn danger", style: "width: 205px; margin-right: 60px; " do
+              = image_tag ICON_LOGIN_GOOGLE, alt: "Google sign up"
+              %span.landingbuttontext Sign in with Google »        
+            = link_to "/auth/facebook", class: "btn danger" do
+              = image_tag ICON_LOGIN_FACEBOOK, alt: "Facebook sign up"
+              %span.landingbuttontext Sign in with Facebook »
+          %div.divider OR
+          = form_for(current_user, html: { id: "update_user" }) do |f|
+            = f.text_field :name, value: nil, placeholder: "Name"
+            = f.text_field :email, style: "margin-left: 10px; margin-right: 10px;", value: nil, placeholder: "E-Mail"
+            = f.password_field :password, value: nil, placeholder: "Password", style: "margin-right: 10px;"
+            = f.submit "Submit", class: "button button-standard button-small", style: "margin-bottom: 10px; width: inherit; padding: 4px 10px; font-size: 14px;"
   .top
     = link_to group_path(@group), class: "home" do
       = image_tag @group.picture, alt: "#{@group.name}"
