--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -14,8 +14,8 @@ pre.unstyled { padding: 0px; background-color: inherit; border: 0px; word-break:
 .post:hover { background-color:#F9F9F9; border-radius: 4px; }
 .postheader h3 { display:inline-block; margin: 0px; font-size:18px; line-height:36px; }
 .rep_badge_post { height: 12px; vertical-align: baseline; }
-.mini_group_icon { height: 20px; width: 20px; margin: 0 2px; position: relative; bottom: 2px; border-radius: 3px;}
-.profile_group_icon { position: relative; bottom: 6px; border-radius: 3px; height: 28px; width: 28px; }
+.mini_group_icon { height: 20px; width: 20px; margin: 0 2px; position: relative; bottom: 2px;}
+.profile_group_icon { position: relative; bottom: 6px; height: 28px; width: 28px; }
 .challengename{font-size:12px; color: #999; margin-left:10px;}
 .votingandpointsarea { display:inline-block; float:right; margin-top:4px; margin-right:-4px;}
 .votingandpointsarea a { padding: 2px 3px 1px 3px;}
