bunch of groups stuff

--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -149,7 +149,7 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
 
 
 /* Profile/Revolution */
-#profile{
+#profile, #challenge{
   .help_box{
     background-clip: padding-box;
     background-color:#FFF7CD;
@@ -170,7 +170,7 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
       
       h4 { text-align: left; }
       img { height: 30px; width: 30px; }
-      form { margin-bottom: 5px; }
+      form { margin-bottom: 5px; border: none; }
       input { width:180px; }
       
       .divider{
