--- a/app/views/sections/register1.html.haml
+++ b/app/views/sections/register1.html.haml
@@ -58,5 +58,8 @@
               %label City
               = f.text_field :city, style: "width: 187px;", placeholder:"Please enter your city"
             %div{ style: "margin: 15px 0 0 0; width: 100%;"}
-              = f.submit "Continue to Register", class: "button button-actionable", style: "float: right;"
+              - if current_user
+                = f.submit "Submit", class: "button button-actionable", style: "float: right;"
+              - else
+                = f.submit "Continue to Register", class: "button button-actionable", style: "float: right;"
               = link_to "Back", finish_section_path(@section, @session_id, s:0), class: "button button-standard", style: "float: left; margin-left: -20px; "
