--- a/app/views/tasks/_new_task_form.html.haml
+++ b/app/views/tasks/_new_task_form.html.haml
@@ -30,6 +30,13 @@
             .controls
               = text_field_tag("task[exact1]", nil, { maxlength: 255, size: 75 })
         
+        .creative.template_toggle.hide
+          .control-group
+            %label.control-label Template (optional)
+            .controls{ style: "margin-top: 6px;" }
+              %a.show_template{ onclick: "$(this).hide(); $('#task_template').show();" } Add template for question
+              = text_area_tag("task[template]", nil, style: "display: none; height: 250px; width: 95%; overflow: auto; border: 1px solid #cccccc; background-color: #ffffff; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); border-radius: 4px; font-family: 'Menlo', 'Courier New', 'Terminal', monospace; font-size: 14px;")
+        
         .multiple_choice
           - (1..4).each do |i|
             .control-group
@@ -86,6 +93,7 @@
       $(".multiple_choice").hide();
       $(".checkin").hide();
       $(".exact").hide();
+      $(".template").hide();
       $(this).parents("div.control-group").siblings(".sub_type").hide();
       var type = $(this).val();
       if(type == 0){
