Fixing create panel.

--- a/app/views/tasks/_new_task_form.html.haml
+++ b/app/views/tasks/_new_task_form.html.haml
@@ -34,7 +34,7 @@
           .control-group
             %label.control-label Template (optional)
             .controls{ style: "margin-top: 6px;" }
-              %a.show_template{ onclick: "$(this).hide(); $('#task_template').show();" } Add template for question
+              %a.show_template{ onclick: "$(this).hide(); $(this).siblings('#task_template').show();" } Add template for question
               = text_area_tag("task[template]", nil, style: "display: none; height: 250px; width: 95%; overflow: auto; border: 1px solid #cccccc; background-color: #ffffff; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); border-radius: 4px; font-family: 'Menlo', 'Courier New', 'Terminal', monospace; font-size: 14px;")
         
         .multiple_choice
