--- a/app/views/sections/register0.html.haml
+++ b/app/views/sections/register0.html.haml
@@ -23,8 +23,8 @@
           %h4 Can I change my mind?
           %p Yes. It's as simple as changing a setting on your profile.          
         .signup{ style: ""}
-          - if current_user
-            = link_to "No thanks, I'll just play MetaBright as a game.", finish_section_path(@section, @session_id, s: 2), style: "display: inline-block; margin-right: 40px; margin-bottom: 0; font-size: 13px;", class: "landingbuttontext button button-info"
-          - else
+          - if current_user.guest_user?
             = link_to "No thanks, I'll just play MetaBright as a game.", finish_section_path(@section, @session_id, s: 9), style: "display: inline-block; margin-right: 40px; margin-bottom: 0; font-size: 13px;", class: "landingbuttontext button button-info"
+          - else
+            = link_to "No thanks, I'll just play MetaBright as a game.", finish_section_path(@section, @session_id, s: 3), style: "display: inline-block; margin-right: 40px; margin-bottom: 0; font-size: 13px;", class: "landingbuttontext button button-info"
           = link_to "Try it out!", finish_section_path(@section, @session_id, s: 1), style: "display: inline-block; font-size: 18px; line-height: 36px;", class: "landingbuttontext button button-actionable"
