--- a/app/views/tasks/_take_text.html.haml
+++ b/app/views/tasks/_take_text.html.haml
@@ -40,9 +40,10 @@
       = text_area_tag "caption", @submitted_answer.caption, style: "height: 40px; display: none; margin: 2px 12px;", placeholder: "Caption will appear immediately below your response..."
 
 %div.CRbuttonspace
-  - if @completed_task.session_id.nil?
+  - if @session_id.nil?
     = link_to "Back", challenge_path(@section.path.permalink, completed: true), class: "button button-standard", style: "float: left;"
-  %a.arena_report_link{ style: "position:relative; top:8px; margin-left:10px; text-decoration:none;"} Report this question
+  - else
+    = link_to "Skip for now", finish_section_path(@section, @session_id), class: "button button-standard", style: "float: left;"
   - if @submitted_answer.reviewed?
     = f.submit "Update", class: "button button-actionable", id: "submit_button", style: "float:right;"
   - else
