--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -20,7 +20,8 @@ pre.unstyled { padding: 0px; background-color: inherit; border: 0px; word-break:
 .votingandpointsarea { display:inline-block; float:right; margin-top:4px; margin-right:-4px;}
 .votingandpointsarea a { padding: 2px 3px 1px 3px;}
 .votingandpointsarea div { display: inline-block; margin: 0 1px 0 8px; position:relative; top:1px;}
-.votingandpointsarea img{ position:relative; bottom: 2px; height:15px; width:15px;}
+.votingandpointsarea .up_vote{ position:relative; bottom: 2px; height:15px; width:15px;}
+.votingandpointsarea .circle_check{ position: relative; top: 1px; height: 15px; width: 15px;}
 .points { font-style:italic; font-weight:bold; font-size:15px; position:relative; bottom:3px; margin-left:4px; }
 .postphotospace { display:inline-block; vertical-align: top; margin-right:12px; }
 .postspace{display: inline-block;  border-radius: 3px;  box-shadow: 0 2px 4px rgba(0, 0, 0, .05);  background-color:white;  border: 1px solid #ccc;  margin:0 auto 0 auto;  position:relative;font:normal 13px arial, sans-serif;padding: 0 12px;width: 520px;}
