--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -1,5 +1,6 @@
 - user = post.user
 
+
 %div.post
   - unless feed.context == :profile
     %div.postphotospace
@@ -18,6 +19,7 @@
       %span
         = link_to truncate(post.path.name.to_s, length: 40), challenge_path(post.path.permalink), class:"challengename"
       %div.votingandpointsarea{ id: ("points_pop" unless current_user == user)}
+        %img.circle_check{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/circle-check.png", title: "Verified correct answer", alt: "Verified correct output"}
         - if current_user
           %span.vote_points= post.points_awarded
           %span.vote_points{ style:"margin-right:1px;"} pts
@@ -34,7 +36,7 @@
                       %li{style: "text-align:center;"}= link_to "Delete Submission", retract_submission_path(post.id), remote: true, confirm: "Are you sure you want to delete your submission?", class: "retract_link", style: "padding:0;"
           - else
             = link_to vote_task_path(post.task.id, sa_id: post.submitted_answer.id), remote: true, class: ("btn vote_button " + (feed.votes.include?(post.submitted_answer.id) ? "btn-info" : "")) do
-              %img{ src: ICON_UPVOTE_URL, alt: "Up-vote" }
+              %img.up_vote{ src: ICON_UPVOTE_URL, alt: "Up-vote" }
         - else
           %span.vote_points= post.points_awarded
           %span.vote_points{ style:"margin-right:5px;" } pts
@@ -99,3 +101,4 @@
     - unless post.caption.blank?
       %div.post_caption= post.caption
     = render "comments/comments", social_details(post)
+    
