--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -49,12 +49,12 @@
     $(".modal_close").click(function(){ $(this).parents('.modal').modal('hide'); });
     
     init_iph();
-    try { 
-      clearInterval(ping_interval); 
-    } catch(err) {
-    }
     $(".fadein").fadeIn(1000);
-    ping_interval = setInterval(function(){ ping(visit_url) }, 10000);
+    // ping_interval = setInterval(function(){ ping(visit_url) }, 10000);
+    // try { 
+    //   clearInterval(ping_interval); 
+    // } catch(err) {
+    // }
   });
 
 - if Rails.env == "production"
