--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -91,3 +91,65 @@
 #profile .postphotospace img { height:50px; width:50px; }
 .profilecontent a { text-decoration: none; cursor: pointer; }
 .profilecontent .leftstuff .floatr p { margin-right:9px; }
+
+.creations {
+	.leftboxfooter {
+		padding: 10px; 
+		list-style-type: none;
+		display: list-item;
+		
+		div {
+			padding: 4px 10px 0 0;
+			margin-bottom: 5px; 
+			&:last-child{ margin-bottom: 0; }
+			
+			.bigger_img { height: 50px; width: 50px; vertical-align: top; }
+			.smaller_img { 
+				height: 40px; 
+				width: 40px; 
+				
+				}
+			
+			img { 
+				border-radius: 4px; 
+				display: inline-block; 
+			}			
+			h2{
+				font-size: 11px;
+				line-height: 20px; 
+				border-bottom: 1px solid rgba(0,0,0,.1); 
+				margin-bottom: 6px; 
+				font-weight: bold; 
+			}
+			h3{
+				font-size: 15px;
+				line-height: 22px;
+				margin-bottom: 6px;
+			}
+			h4{
+				font-size: 13px; 
+				
+				span {font-family: Courier; margin-right: 2px; }
+			}
+			div{ 
+				display: inline-block; 
+				padding: 0; 
+				margin-bottom: 12px;
+			}	
+			ul{
+				margin-top: -10px; 
+				
+				li{
+					display: inline-block;
+					margin-right: 13px;
+					margin-top: 10px; 
+					&:nth-child(5){margin-right:0;}
+				}	
+			}
+			
+			
+			
+					
+		}
+	}
+}
